--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -631,7 +631,7 @@
   discord: http://www.discordapp.com/users/roustan#4742
   youtube: https://www.youtube.com/roustan
   phone: +113107747111
-  image: /images/partners/.jpeg
+  image: /images/partners/8651E6B9-9800-4D0A-B647-254A1B4073E3.jpeg
   description: I'm a body painter. I paint on people and then photograph them. And I've brought this into the metaverse to share with the world!
   location: United States
   languages:
