--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -628,18 +628,19 @@
   default_link: https://twitter.com/RoustanNFT
   email: paulroustan@gmail.com
   twitter: https://twitter.com/RoustanNFT
-  discord: http://www.discordapp.com/users/roustan#4742
+  discord: https://discordapp.com/users/722481129449586739/
   youtube: https://www.youtube.com/roustan
   phone: +113107747111
   image: /images/partners/8651E6B9-9800-4D0A-B647-254A1B4073E3.jpeg
-  description: I'm a body painter. I paint on people and then photograph them. And I've brought this into the metaverse to share with the world!
+  description: Short term established 1x1 venue rental located in the Decentraland sign and surrounded by sidewalk. Existing build offers custom image placements, dance floor, hot tub, DJ pre-recording or live streams. Ready to go for your community, NFT reveal, wearable release drop party. No coding or 3D design knowledge required on your end. Also available, empty parcel directly next door that can be customized by you and your programmers to fit your needs. Both are short term rentals.
   location: United States
   languages:
     - English
   team_size: Individual
   payments:
     - Crypto
-    - Pay Pal
+    - PayPal
   tags:
     - Events
     - Land
+    - Consulting
