--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -271,6 +271,7 @@
   email: hello@terrazero.com
   twitter: https://twitter.com/terrazerotech
   instagram: https://www.instagram.com/terrazerotech/
+  discord: https://discord.com/invite/ztPkbrmGCd
   linkedin: https://www.linkedin.com/company/77088789
   image: /images/partners/terrazero.png
   description: TerraZero is the premier metaverse studio and technologies firm across multiple metaverse worlds, with numerous 50-100 billion market cap clients active in Decentraland. 
