--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -541,7 +541,7 @@
   phone: +61433110043
   linkedin: https://www.linkedin.com/in/mitch-todd/
   image: /images/partners/370EB53C-2999-4283-89EB-CA2C9665D68E.png
-  description: Bridging brands and artists through digital representation.
+  description: Michi Todd is a Wearable Creator and 3d Artist bridging brands and traditional/digital artists and NFT projects through digital representation. Creating with imagination and fashion to make stylised metaverse designs.
   location: Australia
   languages:
     - English
