--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -663,7 +663,7 @@
   twitter: https://twitter.com/Metalivestudio
   discord: https://discord.com/invite/metadogeatmetagamimall
   phone: +447579941539
-  image: /images/partners/.jpeg
+  image: /images/partners/9B7B1D75-CA86-460D-9549-ACBD4D9F4E81.jpeg
   description: Metaverse is place of possibilities, our services begins with your idea. Maybe you want to launch a business in Metaverses, but don’t know whcih Metaverse you want to be. Maybe you want some advice in land options. Or maybe you have a creative project to share with the world. Whatever it is, the way you tell your story online can make all the difference.
   location: United Kingdom
   languages:
