--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -663,18 +663,40 @@
   twitter: https://twitter.com/Metalivestudio
   discord: https://discord.com/invite/metadogeatmetagamimall
   phone: +447579941539
-  image: /images/partners/9B7B1D75-CA86-460D-9549-ACBD4D9F4E81.jpeg
+  image: /images/partners/meta-live.jpeg
   description: Metaverse is place of possibilities, our services begins with your idea. Maybe you want to launch a business in Metaverses, but don’t know whcih Metaverse you want to be. Maybe you want some advice in land options. Or maybe you have a creative project to share with the world. Whatever it is, the way you tell your story online can make all the difference.
   location: United Kingdom
   languages:
     - English
     - Chinese 
-  team_size: Medium
+  team_size: Medium Studio
   payments:
     - Crypto
     - PayPal
     - Credit Card
   tags:
+    - Events
+    - Architect
+    - Consulting
+- name: 42 Meta
+  partnerId: 38
+  default_link: https://42meta.com
+  website: https://42meta.com
+  email: martin@42meta.com
+  linkedin: https://www.linkedin.com/in/martinfrericks
+  image: /images/partners/42meta.png
+  description: "With 42Meta you take the next step in communication and prepare for the future today. We help you with your first steps in the virtual worlds. 42Meta is an early-stage AdTech company that is actively involved in the design of the Metaverse and offers communication options in the Metaverse. Take an active part in building the future and don't wait until all positions have been filled. The Metaverse will be a gigantic upheaval and will not only turn the business world completely upside down."
+  location: Germany
+  languages:
+    - English
+    - German 
+  team_size: Medium Studio
+  payments:
+    - Crypto
+    - PayPal
+    - Wire
+  tags:
+    - Wearables
     - Events
     - Architect
     - Consulting
