--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -731,7 +731,7 @@
   image: /images/partners/drago-capital.png
   description: Capital investments in real estate both metaverse and Athens Greece Properties. Events at Vanilla ICE club.
   location: Greece
-  - phone: +306980676729
+  phone: +306980676729
   languages:
     - English 
     - Hebrew
