--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -763,7 +763,7 @@
   instagram: https://www.instagram.com/scalarvision/
   linkedin: https://www.linkedin.com/company/scalarvision/?viewAsMember=true
   image: /images/partners/scalarvision.png
-  description: * Management consultancy about immersive techs * Create Metaverse Strategy * Design Metaverse Appereance with brand identity, inluding architectural design and 3D asset generation, NFT creation * Create ideas for utilization of Brand's Metaverse Appereance.
+  description: Management consultancy about immersive techs. Create Metaverse Strategy. Design Metaverse Appearance with brand identity, including architectural design and 3D asset generation, NFT creation. Create ideas for utilization of Brand's Metaverse Appereance.
   location: Turkey
   languages:
     - English 
