--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -784,7 +784,7 @@
   twitter: https://twitter.com/bignastyeth
   discord: https://discord.gg/r2FcqCaG
   youtube: https://youTube.com/DCLTutor
-  image: /images/partners/bignasty.png
+  image: /images/partners/bignasty.jpeg
   description: We are a team of blender professionals that center around 3D modeling and Wearable NFT Designing. With 45+ collections published In Decentraland, we promise to always produce the highest quality items. Our 24/7 availability and rapid response times gives you the comfort of knowing we are always on call ready to jump into action. Working with BigNasty also gives YOU the ability to see real-time updates of your project, and allows you to be able to jump in and critique at any point during the process.
   location: United States
   languages:
