--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -832,7 +832,7 @@
   linkedin: https://www.linkedin.com/in/jibrail-idris/
   youtube: https://www.youtube.com/channel/UCz-g69qhfHOV2Zuy7xgLiIw
   phone: +6582661085
-  image: /images/partners/bandwagonlabs.jpeg
+  image: /images/partners/bandwagon.svg.png
   description: End to end Decentraland web3 marketing, NFTs, wearable and gamification solutions.
   location: Singapore
   languages:
