--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -96,7 +96,7 @@
     - Architect
     - Events
     - Consulting
-    - Land Rental
+    - Land
 - name: Malloy
   partnerId: 5
   email: malloy@feekagames.com
@@ -847,5 +847,5 @@
     - Architect
     - Consulting
     - 3D
-    - Land Rental
+    - Land
 
