--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -136,10 +136,13 @@
   email: info@lastslice.org
   image: /images/partners/last-slice.png
   description: The Last Slice Collective is a full cycle development studio comprised of over 200 talented multi-disciplinary artists dedicated to creating the most immersive and innovative experiences in Decentraland. From wearable creations to full custom scene creation and ideation, The Last Slice Collective has delivered over 40 different types of experiences in Decentraland in the last year including but not limited to, Samsung, Wall Street Bets, Snapple, Playboy, Animetas, Club Nyan Cat, Chibi Apes, Bright Moments (Venetian), DCL Halloween 2021, Deadheads, Apes3d, Canine Country Club, Rebel Bots, 420 Fest at Xetaplex, and more...
-  team-size: Large Studio
   instagram: https://www.instagram.com/lastsliceco/
   opensea: https://opensea.io/collection/last-slice-collective-nft
   location: United States
+  payment:  
+    - Crypto
+    - Wire
+  team_size: Large Studio
   languages: 
     - English
   tags:
