--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -123,10 +123,16 @@
   default_link: https://kollectiff.com/
   website: https://kollectiff.com/
   email: contact@kollectiff.com
+  linkedin: https://www.linkedin.com/company/kollectiff/
+  instagram: https://www.instagram.com/koll3ctiff
+  twitter: https://twitter.com/Kollectiff
   image: /images/partners/kollectiff.png
-  description: Kollektiff designed catwalks for Perry Ellis, Placebo, Faith. 
+  description: KOLLECTIFF develops technology and content solutions that make it accessible for brands, media companies and creators to launch, manage and scale web3 experiences. Our multidisciplinary team has extensive blockchain development and bespoke content creation experience. We demystify web3, reduce its barriers to entry, and empower our clients to access and create cultural moments in the era of digital ownership and the metaverse.
   tags:
     - Wearables
+    - Architect
+    - 3D
+    - Consulting
 - name: Last Slice
   partnerId: 7
   default_link: https://lastslice.org/
