--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -145,7 +145,7 @@
   instagram: https://www.instagram.com/lastsliceco/
   opensea: https://opensea.io/collection/last-slice-collective-nft
   location: United States
-  payment:  
+  payments:  
     - Crypto
     - Wire
   team_size: Large Studio
