--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -311,6 +311,21 @@
     - Events 
     - Land
     - Consulting
+- name: MixedBag
+  partnerId: 19
+  default_link: http://www.mixedbag.it
+  website: http://www.mixedbag.it
+  email: metaverse@mixedbag.it
+  twitter: https://twitter.com/MixedBagGames
+  linkedin: https://www.linkedin.com/company/mixedbag-srl/
+  youtube: https://www.youtube.com/user/MixedBagChannel
+  image: /images/partners/mixed-bag.png
+  description: MixedBag is an award winning video game studio focused on the creation and development of new and original games using the latest technologies in innovative ways. We’ve developed and successfully launched a wide range of games on all available platforms, from console to PC and mobile. Our latest game, the Apple Arcade exclusive Secret Oops!, uses Augmented Reality to offer a never before seen multiplayer collaborative experience. We now offer an extensive range of metaverse development services, using our knowledge to offer our clients the most stunning and interactive lands possible.
+  tags:
+    - Wearables
+    - Architect
+    - Events 
+    - Full Production
 - name: Cominted Labs
   partnerId: 21
   default_link: https://comintedlabs.io/
