--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -325,7 +325,7 @@
     - Wearables
     - Architect
     - Events 
-    - Full Production
+    - Consulting
 - name: Cominted Labs
   partnerId: 21
   default_link: https://comintedlabs.io/
