--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -929,7 +929,7 @@
 - name: Stoney Eye
   partnerId: 46
   default_link: sespromusic@gmail.com
-  website: https://www.parcelparty.io
+  website: https://opensea.io/StoneyEye
   email: sespromusic@gmail.com
   discord: StoneyEye#3965
   twitter: https://twitter.com/@stoney_eye
