--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -953,7 +953,7 @@
   twitter: https://twitter.com/ClurgeOfficial
   instagram: https://www.instagram.com/clurge_official/
   discord: https://discord.com/invite/QCdsP5YhvE
-  image: /images/partners/clurge.jpeg
+  image: /images/partners/clurge.png
   description: Beautifully crafted Wearables & Bulk wearable airdrops, We are here to help your projects succeed and make your metaverse dream reality.
   location: Singapore
   languages:
