--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -988,4 +988,26 @@
     - Architect
     - Land
     - Consulting
+    
+- name: Serraform
+  partnerId: 47
+  default_link: https://www.serraform.com
+  website: https://www.serraform.com
+  email: justen@serraform.com
+  twitter: 
+  instagram: 
+  image: /images/partners/serraform.png
+  description: Serraform specializes in content streaming and creative productions for event of all shapes and sizes. We are experts in cloud infrastructure, data analytics, web3, and cybersecurity and have worked with several fortune 500 companies to help launch their brands and products into the metaverse.
+  location: Canada
+  languages:
+    - English
+    - French
+  team_size: Medium Studio
+  payments:
+    - Crypto
+    - Wire Transfer
+    - PayPal
+  tags:
+    - Events
+    - Consulting
 
