--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1042,7 +1042,7 @@
   discord: https://discord.com/invite/SXKJhyXT5D
   instagram: https://www.instagram.com/bufalomusic/
   youtube: https://www.youtube.com/channel/UCyj9_2CyQ-qWn9uwNqKRDaQ
-  image: /images/partners/bufalo.jpg
+  image: /images/partners/bufalo.png
   description: Bufalo is a masked DJ and producer from Paris who has created a really strong and singular universe inspired by the "Far West" culture, mixing Country, Folk, Deep House, and House to create a new genre called "Futuristic Western Music" The DJ set made by Bufalo is a fully-produced DJ set that contains self madeedits, remixes, compositions, and mashups that have never been done or heard before.
   location: France
   languages:
