--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1070,7 +1070,7 @@
   languages:
     - English
     - German
-  team_size: individual
+  team_size: Individual
   payments:
     - Crypto
   tags:
