--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1084,7 +1084,7 @@
   discord: https://discord.gg/3BMzfH686j
   linkedin: https://www.linkedin.com/company/ohmyverse-io/
   youtube: https://www.youtube.com/channel/UCVR7OGdEdNeP4s7HpiIeP9A
-  image: /images/partners/ohmyverse.JPG
+  image: /images/partners/ohmyverse.PNG
   description: Metaverse and blockchain development. Full coverage from smartcontract development to SDK coding and 3D designs including wearables and buildings.
   location: Spain & Argentina
   languages:
