--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1086,7 +1086,7 @@
   youtube: https://www.youtube.com/channel/UCVR7OGdEdNeP4s7HpiIeP9A
   image: /images/partners/ohmyverse.PNG
   description: Metaverse and blockchain development. Full coverage from smartcontract development to SDK coding and 3D designs including wearables and buildings.
-  location: Spain & Argentina
+  location: Spain
   languages:
     - English
     - Spanish
