--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -1107,7 +1107,7 @@
   email: synthianominae@gmail.com
   twitter: https://twitter.com/SynthiaNominae?t=Hmrm50u9hHFKqPq8DHHmAA&s=09
   youtube: https://youtube.com/c/SynthiaNominae
-  image: /images/partners/synthianominae.PNG
+  image: /images/partners/synthianominae.png
   description: Helping others find and follow their inner light.
   location: United Stated
   languages:
