--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -889,7 +889,7 @@
   location: Spain
   languages:
     - English
-    - Spain
+    - Spanish
     - Portuguese
     - Italian
   team_size: Medium Studio
